[gd_scene load_steps=2 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Sound1" type="AudioStreamPlayer" parent="."]

[node name="Sound2" type="AudioStreamPlayer" parent="."]

[node name="Sound3" type="AudioStreamPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
